--- a/Mobile Development/app/src/main/res/values/colors.xml
+++ b/Mobile Development/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary_color">#4FACFE</color>
+    <color name="darker_primary_color">#0F89F8</color>
+
     <color name="black">#FF000000</color>
+    <color name="white">#FFFFFF</color>
     <color name="text_gray">#858597</color>
     <color name="circle2">#21283F</color>
 </resources>
