--- a/Mobile Development/app/src/main/res/values/themes.xml
+++ b/Mobile Development/app/src/main/res/values/themes.xml
@@ -1,5 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Fasrecon" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Fasrecon" parent="Theme.Material3.DayNight.NoActionBar">
+    </style>
+
+    <style name="button_login_onboarding_page" parent="ThemeOverlay.Material3.Button">
+        <item name="android:backgroundTint">@color/primary_color</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">10dp</item>
+    </style>
+
+    <style name="button_signup_onboarding_page" parent="ThemeOverlay.Material3.Button">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="strokeColor">@color/primary_color</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="android:textColor">@color/primary_color</item>
+        <item name="cornerRadius">10dp</item>
     </style>
 </resources>
