--- a/Mobile Development/app/src/main/res/layout-land/activity_onboarding_page.xml
+++ b/Mobile Development/app/src/main/res/layout-land/activity_onboarding_page.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    app:layoutDescription="@xml/activity_onboarding_page_scene_portrait"
     tools:context=".ui.onboardingpage.OnboardingPageActivity">
 
     <TextView
@@ -146,33 +145,34 @@
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginEnd="16dp"
-        app:altSrc="@drawable/ic_circle_full_1"
         app:layout_constraintBottom_toBottomOf="@id/menu2"
         app:layout_constraintEnd_toStartOf="@id/menu2"
         app:layout_constraintTop_toTopOf="@id/menu2"
-        app:srcCompat="@drawable/ic_circle_full_2" />
+        app:srcCompat="@drawable/ic_circle_full_2"
+        app:altSrc="@drawable/ic_circle_full_1"
+         />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/menu2"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginTop="30dp"
-        app:altSrc="@drawable/ic_circle_full_1"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical"
         app:layout_constraintTop_toBottomOf="@id/desc_menu_page1"
-        app:srcCompat="@drawable/ic_circle_full_2" />
+        app:srcCompat="@drawable/ic_circle_full_2"
+        app:altSrc="@drawable/ic_circle_full_1" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/menu3"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginStart="16dp"
-        app:altSrc="@drawable/ic_circle_full_1"
         app:layout_constraintBottom_toBottomOf="@id/menu2"
         app:layout_constraintStart_toEndOf="@id/menu2"
         app:layout_constraintTop_toTopOf="@id/menu2"
-        app:srcCompat="@drawable/ic_circle_full_2" />
+        app:srcCompat="@drawable/ic_circle_full_2"
+        app:altSrc="@drawable/ic_circle_full_1" />
 
     <Button
         android:id="@+id/btn_signup_onboarding_page"
@@ -185,9 +185,9 @@
         android:text="@string/signup"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_login_onboarding_page"
@@ -200,9 +200,9 @@
         android:text="@string/login"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical"
@@ -222,4 +222,4 @@
         app:layout_constraintGuide_percent="0.80"
         app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
