feat: Set motion layout in landscape

--- a/Mobile Development/app/src/main/res/layout-land/activity_onboarding_page.xml
+++ b/Mobile Development/app/src/main/res/layout-land/activity_onboarding_page.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
+    app:layoutDescription="@xml/activity_onboarding_page_scene_landscape"
     tools:context=".ui.onboardingpage.OnboardingPageActivity">
 
     <TextView
         android:id="@+id/skip_menu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="28dp"
         android:letterSpacing="0.05"
         android:text="@string/skip"
         android:textColor="@color/black"
@@ -25,13 +26,14 @@
     <ImageView
         android:id="@+id/image_menu_page1"
         android:layout_width="0dp"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
         android:contentDescription="@string/onboarding_page_image"
         android:src="@drawable/onboarding_image_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/title_menu_page1"
@@ -43,9 +45,9 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/image_menu_page1"
-        app:layout_constraintStart_toStartOf="@id/image_menu_page1"
-        app:layout_constraintTop_toBottomOf="@id/image_menu_page1" />
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
+        app:layout_constraintTop_toTopOf="@id/guideline_horizontal1"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/desc_menu_page1"
@@ -65,13 +67,14 @@
     <ImageView
         android:id="@+id/image_menu_page2"
         android:layout_width="0dp"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
         android:contentDescription="@string/onboarding_page_image"
         android:src="@drawable/onboarding_image_2"
+        android:alpha="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/title_menu_page2"
@@ -83,9 +86,8 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/image_menu_page2"
-        app:layout_constraintStart_toStartOf="@id/image_menu_page2"
-        app:layout_constraintTop_toBottomOf="@id/image_menu_page2" />
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guideline_horizontal1"/>
 
     <TextView
         android:id="@+id/desc_menu_page2"
@@ -104,13 +106,14 @@
     <ImageView
         android:id="@+id/image_menu_page3"
         android:layout_width="0dp"
-        android:layout_height="250dp"
+        android:layout_height="300dp"
         android:contentDescription="@string/onboarding_page_image"
         android:src="@drawable/onboarding_image_3"
+        android:alpha="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/title_menu_page3"
@@ -122,9 +125,8 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/image_menu_page3"
-        app:layout_constraintStart_toStartOf="@id/image_menu_page3"
-        app:layout_constraintTop_toBottomOf="@id/image_menu_page3" />
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guideline_horizontal1" />
 
     <TextView
         android:id="@+id/desc_menu_page3"
@@ -145,34 +147,33 @@
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginEnd="16dp"
+        app:altSrc="@drawable/ic_circle_full_1"
         app:layout_constraintBottom_toBottomOf="@id/menu2"
         app:layout_constraintEnd_toStartOf="@id/menu2"
         app:layout_constraintTop_toTopOf="@id/menu2"
-        app:srcCompat="@drawable/ic_circle_full_2"
-        app:altSrc="@drawable/ic_circle_full_1"
-         />
+        app:srcCompat="@drawable/ic_circle_full_2" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/menu2"
         android:layout_width="10dp"
         android:layout_height="10dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
-        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
-        app:layout_constraintTop_toBottomOf="@id/desc_menu_page1"
-        app:srcCompat="@drawable/ic_circle_full_2"
-        app:altSrc="@drawable/ic_circle_full_1" />
+        android:layout_marginTop="24dp"
+        app:altSrc="@drawable/ic_circle_full_1"
+        app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical2"
+        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2"
+        app:srcCompat="@drawable/ic_circle_full_2" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/menu3"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginStart="16dp"
+        app:altSrc="@drawable/ic_circle_full_1"
         app:layout_constraintBottom_toBottomOf="@id/menu2"
         app:layout_constraintStart_toEndOf="@id/menu2"
         app:layout_constraintTop_toTopOf="@id/menu2"
-        app:srcCompat="@drawable/ic_circle_full_2"
-        app:altSrc="@drawable/ic_circle_full_1" />
+        app:srcCompat="@drawable/ic_circle_full_2" />
 
     <Button
         android:id="@+id/btn_signup_onboarding_page"
@@ -185,9 +186,10 @@
         android:text="@string/signup"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:alpha="0"
+        app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <Button
         android:id="@+id/btn_login_onboarding_page"
@@ -200,9 +202,10 @@
         android:text="@string/login"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="parent"
+        android:alpha="0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline_vertical" />
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical2"
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical"
@@ -210,11 +213,29 @@
         android:layout_height="64dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintGuide_percent="0.45"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_horizontal"
+        android:id="@+id/guideline_vertical2"
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.725"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_horizontal1"
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.1"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_horizontal2"
         android:layout_width="wrap_content"
         android:layout_height="64dp"
         android:orientation="horizontal"
@@ -222,4 +243,4 @@
         app:layout_constraintGuide_percent="0.80"
         app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
