--- a/Mobile Development/app/src/main/res/values-night/themes.xml
+++ b/Mobile Development/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Fasrecon" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Fasrecon" parent="Theme.MaterialComponents.DayNight">
 
     </style>
 </resources>
