--- a/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Mobile Development/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/account_icon"
+        android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
     <item
@@ -15,5 +15,10 @@
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
+
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/account_icon"
+        android:title="@string/title_profile" />
 
 </menu>
