pemindahan setting fragment

--- a/Mobile Development/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Mobile Development/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,7 +24,7 @@
         tools:layout="@layout/fragment_notifications" />
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.application.fasrecon.SettingFragment"
+        android:name="com.application.fasrecon.ui.setting.SettingFragment"
         android:label="fragment_setting"
         tools:layout="@layout/fragment_setting" />
 </navigation>
