--- a/Mobile Development/app/src/main/res/layout/alert_dialog.xml
+++ b/Mobile Development/app/src/main/res/layout/alert_dialog.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:padding="8dp"
-    card_view:layout_constraintCircleRadius="16dp"
-    card_view:circularflow_radiusInDP="16dp"
+    card_view:cardCornerRadius="16dp"
     card_view:circularflow_defaultRadius="16dp"
-    card_view:cardCornerRadius="16dp">
+    card_view:circularflow_radiusInDP="16dp"
+    card_view:layout_constraintCircleRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="16dp"
-        android:layout_height="wrap_content">
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/textView"
@@ -33,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Apakan anda yakin ingin keluar?"
+            android:text="@string/logout_message"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -53,10 +52,11 @@
             card_view:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btn_logout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16sp"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="4"
             android:background="@drawable/btn_logout_background"
             android:text="@string/log_out"
             android:textSize="12sp"
