--- a/Mobile Development/app/src/main/res/layout/activity_login.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_login.xml
@@ -84,11 +84,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="8dp"
-                app:startIconDrawable="@drawable/password_icon"
-                app:layout_constraintStart_toStartOf="parent"
                 app:endIconMode="password_toggle"
                 app:endIconTint="#4FABFC"
-                app:layout_constraintTop_toBottomOf="@+id/textView3">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                app:startIconDrawable="@drawable/password_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
