--- a/Mobile Development/app/src/main/res/layout/activity_login.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_login.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:textColor="@color/white"
         android:text="@string/log_in"
+        android:textColor="@color/white"
         android:textSize="32sp"
         android:textStyle="bold" />
 
@@ -34,31 +34,31 @@
             android:padding="16dp">
 
             <TextView
-                style="@style/Text_header"
                 android:id="@+id/textView2"
+                style="@style/Text_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:text="@string/email"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="8dp"
                 android:outlineAmbientShadowColor="@color/black"
-                app:startIconDrawable="@drawable/emal_icon"
                 android:textAlignment="center"
                 app:boxCornerRadiusBottomEnd="12dp"
                 app:boxCornerRadiusBottomStart="12dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="12dp"
                 app:boxCornerRadiusTopStart="12dp"
                 app:boxStrokeColor="#4FACFE"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2">
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:startIconDrawable="@drawable/emal_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -70,11 +70,11 @@
             <TextView
                 android:id="@+id/textView3"
                 style="@style/Text_header"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/password"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
@@ -84,6 +84,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="8dp"
+                app:boxCornerRadiusBottomEnd="12dp"
+                app:boxCornerRadiusBottomStart="12dp"
+                app:boxCornerRadiusTopEnd="12dp"
+                app:boxCornerRadiusTopStart="12dp"
                 app:endIconMode="password_toggle"
                 app:endIconTint="#4FABFC"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,9 +96,9 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:inputType="textPassword"
                     android:textColor="@color/black"
-                    android:layout_height="match_parent"
                     android:textSize="14sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -105,9 +109,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/lupa_password"
+                android:textColor="#4FACFE"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:textColor="#4FACFE"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
@@ -116,9 +120,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:backgroundTint="#4FACFE"
                 android:text="@string/masuk"
                 android:textColor="@color/white"
-                android:backgroundTint="#4FACFE"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -130,11 +134,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:textStyle="bold"
-                android:textSize="16sp"
+                android:text="@string/belum_punya_akun_daftar"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/transparent"
-                android:text="@string/belum_punya_akun_daftar"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_login" />
