--- a/Mobile Development/app/src/main/res/layout/activity_register.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#4FACFE"
     tools:context=".ui.login.RegisterActivity">
 
@@ -21,7 +22,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="760dp"
+        android:layout_height="700dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-10dp"
         android:padding="16dp"
