--- a/Mobile Development/app/src/main/res/layout/activity_login.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="700dp"
+        android:layout_marginTop="100dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-20dp"
         android:padding="16dp"
