--- a/Mobile Development/app/src/main/res/layout/alert_dialog.xml
+++ b/Mobile Development/app/src/main/res/layout/alert_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -40,28 +41,29 @@
         <Button
             android:id="@+id/btn_cancel"
             style="@style/button_signup_onboarding_page"
-            android:layout_width="130dp"
+            android:layout_width="120dp"
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_weight="4"
             android:text="@string/cancel_setting"
             android:textColor="@color/custom_blue"
             android:textSize="12sp"
             android:textStyle="normal"
-            card_view:layout_constraintEnd_toStartOf="@+id/textView"
+            card_view:layout_constraintEnd_toStartOf="@+id/btn_logout"
             card_view:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
             android:id="@+id/btn_logout"
-            android:layout_width="130dp"
+            style="@style/button_login_onboarding_page"
+            android:layout_width="120dp"
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
             android:layout_weight="4"
-            style="@style/button_login_onboarding_page"
             android:text="@string/log_out"
             android:textSize="12sp"
             android:textStyle="normal"
-            card_view:layout_constraintStart_toEndOf="@+id/textView"
+            card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
