fix: login page layout

--- a/Mobile Development/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#4FACFE"
-    tools:context=".ui.login.ForgotPassword">
+    tools:context=".ui.forgotpassword.ForgotPassword">
 
     <TextView
         android:layout_width="wrap_content"
