--- a/Mobile Development/app/src/main/res/layout/activity_register.xml
+++ b/Mobile Development/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#4FACFE"
-    tools:context=".ui.login.RegisterActivity">
+    tools:context=".ui.register.RegisterActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -226,7 +226,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:backgroundTint="#4FACFE"
-                    android:text="@string/daftar"
+                    android:text="@string/register"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold"
